# sorter

./: .gitignore  LICENSE  README.md  sorter.cabal  stack.yaml
lib/: SortAlgo.hs  Sorter.hs
lib/SortAlgo/: Algo.hs  BubbleSort.hs  HeapSort.hs  QuickSort.hs  SelectSort.hs  SmallSort.hs
lib/Sorter/: Animate.hs  Runner.hs  Spec.hs
src/: CmdLine.hs  Main.hs  SortAlgo.hs  Sorter.hs
src/SortAlgo/: Algo.hs  BubbleSort.hs  QuickSort.hs  SelectSort.hs  SmallSort.hs
src/Sorter/: Animate.hs  Runner.hs  SorterImpl.hs  Spec.hs
test/: Test.hs
