name:                sorter
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/iljakuklic/sorter#readme
license:             BSD3
license-file:        LICENSE
author:              LukasK
maintainer:          ilja.kuklic@centrum.cz
copyright:           LukasK
category:            Algorithm Visualization
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable sorter
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       Sorter,
                       Sorter.Animate,
                       Sorter.Spec,
                       Sorter.Runner,
                       SortAlgo,
                       SortAlgo.Algo,
                       SortAlgo.BubbleSort,
                       SortAlgo.SelectSort,
                       SortAlgo.SmallSort,
                       SortAlgo.QuickSort
  build-depends:       base >= 4.7 && < 5,
                       array >= 0.5 && < 1,
                       mtl >= 2.2 && < 3,
                       gloss >= 1.13 && < 2,
                       random >= 1.1 && < 2
