name:                sorter
version:             0.1.1.0
-- synopsis:
-- description:
homepage:            https://github.com/iljakuklic/sorter#readme
license:             MIT
license-file:        LICENSE
author:              LukasK
maintainer:          ilja.kuklic@centrum.cz
copyright:           LukasK
category:            Algorithm Visualization
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      lib
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Wredundant-constraints
  exposed-modules:     Sorter,
                       Sorter.Animate,
                       Sorter.Spec,
                       Sorter.Runner,
                       SortAlgo,
                       SortAlgo.Algo,
                       SortAlgo.BubbleSort,
                       SortAlgo.SelectSort,
                       SortAlgo.SmallSort,
                       SortAlgo.QuickSort
  build-depends:       base >= 4.7 && < 5,
                       array >= 0.5 && < 1,
                       mtl >= 2.2 && < 3,
                       gloss >= 1.13 && < 2,
                       gloss-export >= 0.1 && < 0.2,
                       text >= 1.2 && < 2

executable sorter
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Wredundant-constraints
  main-is:             Main.hs
  other-modules:       CmdLine
  build-depends:       sorter,
                       base >= 4.7 && < 5,
                       random >= 1.1 && < 2,
                       text >= 1.2 && < 2,
                       optparse-generic >= 1.3 && < 2,
                       optparse-applicative >= 0.14 && < 1
